--- a/index.html
+++ b/index.html
@@ -22,45 +22,106 @@
       .form-control {
         margin-bottom: 5px;
       }
+      .selected {
+        background-color: yellow;
+      }
+      .bold {
+        font-weight: bold;
+      }
+      .footer {
+        text-align: center;
+      }
     </style>
     <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular/angular-messages.js"></script>
     <script>
-      angular.module('phoneBook', []);
+      angular.module('phoneBook', ["ngMessages"]);
       angular.module('phoneBook').controller('phoneBookCtrl', function ($scope) {
         $scope.app = 'Phone Book';
         $scope.contacts = [
-          {name: "Pedro", phone: "99998888"},
-          {name: "Ana", phone: "99998877"},
-          {name: "Maria", phone: "99998866"}
+          {name: "Pedro", phone: "99998888", color: "blue"},
+          {name: "Ana", phone: "99998877", color: "yellow"},
+          {name: "Maria", phone: "99998866", color: "red"}
         ];
+
+        $scope.operators = [
+          {name: "Oi", id: 14, category: 'Mobile'},
+          {name: "Vivo", id: 15, category: 'Mobile'},
+          {name: "Tim", id: 41, category: 'Mobile'},
+          {name: "GVT", id: 25, category: 'Cable'},
+          {name: "Embratel", id: 21, category: 'Cable'}
+        ];
+
         $scope.addContact = function (contact) {
           $scope.contacts.push(contact);
           delete $scope.contact;
+          $scope.contactForm.$setPristine();
         };
+
+        $scope.removeContact = function (contacts) {
+          $scope.contacts = contacts.filter(function (contact) {
+            if (!contact.selected) return contact;
+          });
+        }
+
+        $scope.isSelectedContact = function (contacts) {
+          return contacts.some(function (contact) {
+            return contact.selected;
+          });
+        }
       });
     </script>
   </head>
   <body ng-controller="phoneBookCtrl">
     <div class="jumbotron">
       <h3>{{ app }}</h3>
-      <table class="table table-striped">
+      <table ng-show="contacts.length > 0" class="table">
         <thead>
           <tr>
+            <th></th>
             <th>Name</th>
             <th>Phone</th>
+            <th>Operator</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="contact in contacts">
+          <tr ng-class="{'selected bold': contact.selected}" ng-repeat="contact in contacts">
+            <td><input type="checkbox" ng-model="contact.selected" /></td>
             <td>{{ contact.name }}</td>
             <td>{{ contact.phone }}</td>
+            <td>{{ contact.operator.name }}</td>
+            <td><div style="width: 20px; height: 20px" ng-style="{'background-color': contact.color}">
+
+            </div></td>
           </tr>
         </tbody>
       </table>
       <hr />
-      <input class="form-control" type="text" ng-model="contact.name" placeholder="Name" />
-      <input class="form-control" type="text" ng-model="contact.phone" placeholder="Phone" />
-      <button class="btn btn-primary btn-block" ng-click="addContact(contact)" ng-disabled="!contact.name || !contact.phone">Add contact</button>
+      <form name="contactForm">
+        <input class="form-control" type="text" ng-model="contact.name" name="name" placeholder="Name" ng-required="true" ng-minlength="10" />
+        <input class="form-control" type="text" ng-model="contact.phone" name="phone" placeholder="Phone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/" />
+        <select class="form-control" ng-model="contact.operator" ng-options="operator.name group by operator.category for operator in operators">
+          <option value="">Select an operator</option>
+        </select>
+      </form>
+      <div ng-messages="contactForm.name.$error" class="alert alert-danger">
+        <div ng-message="required" >
+          Por favor, preencha o campo nome!
+        </div>
+        <div ng-show="minlength">
+          O campo nome deve ter no mínimo 10 caracteres.
+        </div>
+      </div>
+      <div ng-show="contactForm.phone.$error.required && contactForm.phone.$dirty" class="alert alert-danger">
+        Por favor, preencha o campo telefone!
+      </div>
+      <div ng-show="contactForm.phone.$error.pattern" class="alert alert-danger">
+        O campo telefone deve ter o formato [9]9999-9999
+      </div>
+      <button class="btn btn-primary btn-block" ng-click="addContact(contact)" ng-disabled="contactForm.$invalid">Add contact</button>
+      <button class="btn btn-danger btn-block" ng-click="removeContact(contacts)" ng-if="isSelectedContact(contacts)">Remove contact</button>
     </div>
+    <div ng-include="'footer.html'"></div>
   </body>
 </html>
