Add order by filter

--- a/index.html
+++ b/index.html
@@ -62,13 +62,18 @@
           $scope.contacts = contacts.filter(function (contact) {
             if (!contact.selected) return contact;
           });
-        }
+        };
 
         $scope.isSelectedContact = function (contacts) {
           return contacts.some(function (contact) {
             return contact.selected;
           });
         }
+
+        $scope.sortedBy = function (field) {
+          $scope.criteria = field;
+          $scope.direction = !$scope.direction;
+        };
       });
     </script>
   </head>
@@ -80,15 +85,15 @@
         <thead>
           <tr>
             <th></th>
-            <th>Name</th>
-            <th>Phone</th>
+            <th><a href="" ng-click="sortedBy('name')">Name</a></th>
+            <th><a href="" ng-click="sortedBy('phone')">Phone</a></th>
             <th>Operator</th>
             <th>Date</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
-          <tr ng-class="{'selected bold': contact.selected}" ng-repeat="contact in contacts | filter:search | orderBy:'name':true">
+          <tr ng-class="{'selected bold': contact.selected}" ng-repeat="contact in contacts | filter:search | orderBy:criteria:direction">
             <td><input type="checkbox" ng-model="contact.selected" /></td>
             <td>{{ contact.name | uppercase }}</td>
             <td>{{ contact.phone }}</td>
@@ -102,7 +107,7 @@
       <form name="contactForm">
         <input class="form-control" type="text" ng-model="contact.name" name="name" placeholder="Name" ng-required="true" ng-minlength="10" />
         <input class="form-control" type="text" ng-model="contact.phone" name="phone" placeholder="Phone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/" />
-        <select class="form-control" ng-model="contact.operator" ng-options="operator.name group by operator.category for operator in operators">
+        <select class="form-control" ng-model="contact.operator" ng-options="operator.name group by operator.category for operator in operators | orderBy:'name'">
           <option value="">Select an operator</option>
         </select>
       </form>
@@ -111,7 +116,7 @@
           The name field is required!
         </div>
         <div ng-message="minlength" class="alert alert-danger">
-          The name field must be at least 5 characters.
+          The name field must be at least 10 characters.
         </div>
       </div>
       <div ng-show="contactForm.phone.$error.required && contactForm.phone.$dirty" class="alert alert-danger">
